apps/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard-home
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: adguard.blackk.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home-web
                port:
                  number: 3000
  tls:
    - hosts:
        - adguard.blackk.lan
      secretName: adguard-home-tls
